thesis: cite risc-v formal

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -517,3 +517,10 @@
  publisher = {Academic Press Ltd.},
  address = {London, UK, UK},
 }
+
+@Online{RISCV-formal,
+    title = {RISC-V Formal Verification Framework},
+    author = {Wolf, Clifford},
+    url = {https://github.com/SymbioticEDA/riscv-formal},
+    urldate = {06 November 2019},
+}
