--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -581,7 +581,7 @@ Adding to the first argument of the model not being implementation independent, 
 This thesis, however, is not about verifying how pipelining can be implemented correctly but about \textit{higher level} properties of \glspl{isa}.
 
 Additionally, aspects of the functional correctness of an implementation towards the \gls{isa} are served adequately by existing methods:
-In \cite{Zhang15, Mukherjee16} attempts to verify hardware in general have been proposed and implementations of processors have been verified against higher level properties in \cite{Beatty94, Berezin98, Trippel19} or against their actual specifications in form of \glspl{isa} in \cite{Burch94, Reid16}.
+In \cite{Zhang15, Mukherjee16} attempts to verify hardware in general have been proposed and implementations of processors have been verified against higher level properties in \cite{Beatty94, Berezin98, Trippel19} or against their actual specifications in form of an \glspl{isa} in \cite{Burch94, Reid16, RISCV-formal}.
 
 \subsubsection{Virtual Memory}
 
