--- a/thesis/sections/checking.tex
+++ b/thesis/sections/checking.tex
@@ -139,28 +139,7 @@ We also will then verify the effectiveness of these rules by re-running the proo
 
 \begin{figure}
     \centering
-    \begin{tikzpicture}[node distance = 1.5cm, auto]
-        \node[block] (proofs) {run proofs};
-        \node[decision] (failure) [below=of proofs] {is there a failure?};
-        \node[block] (inspect) [below=of failure] {inspect counter example};
-        \node[decision] (model) [right=of inspect] {is the model correct?};
-        \node[block] (fix) [above=of model] {fix the model};
-        \node[decision] (cause) [below=of model] {is mitigation possible?};
-        \node[block] (architecture) [left=of cause] {refine the architecture};
-        \node[block] (rule) [below=of cause] {refine assumptions};
-
-        \path[line] (proofs) -- (failure);
-        \path[line] (failure) -- node[near start] {yes} (inspect);
-        \path[line,dashed] (failure.west) -- node[near start] {no} ++(left:1.5cm);
-        \path[line] (inspect) -- (model);
-        \path[line] (model) -- node[near start] {no} (fix);
-        \path[line] (fix) |- (proofs);
-        \path[line] (model) -- node[near start] {yes} (cause);
-        \path[line] (cause) -- node[near start] {yes} (architecture);
-        \path[line] (cause) -- node[near start] {no} (rule);
-        \path[line] (architecture.west) -| ++(left:1cm) |- (proofs);
-        \path[line] (rule.west) -| ($ (architecture.west) + (left:1cm) $);
-    \end{tikzpicture}
+    \includegraphics[width=\textwidth]{figures/verfification-process.png}
     \caption{Verification Process Flowchart}
     \label{fig:ver-process}
 \end{figure}
